# ChangeLog for sci-libs/nfft
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/nfft/ChangeLog,v 1.1 2013/05/06 15:24:57 ottxor Exp $

*nfft-3.2.3 (06 May 2013)

  06 May 2013; Christoph Junghans <ottxor@gentoo.org> +metadata.xml,
  +nfft-3.2.3.ebuild:
  initial import from sci overlay