@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare pretend test
-DEPEND=sci-libs/fftw:3.0[openmp?]
+DEPEND=sci-libs/fftw:3.0[threads,openmp?]
 DESCRIPTION=library for nonequispaced discrete Fourier transformations
 EAPI=5
 HOMEPAGE=http://www-user.tu-chemnitz.de/~potts/nfft
 IUSE=openmp static-libs
 KEYWORDS=~x86 ~amd64
 LICENSE=GPL-2
-RDEPEND=sci-libs/fftw:3.0[openmp?]
+RDEPEND=sci-libs/fftw:3.0[threads,openmp?]
 SLOT=0
 SRC_URI=http://www-user.tu-chemnitz.de/~potts/nfft/download/nfft-3.2.3.tar.gz
 _eclasses_=autotools	c118b9a8e93bfef124f2d7a2fe56a95e	autotools-utils	3727db64c7b960903d5033280f108080	eutils	f99a767f569b1f0731b3a1edd17c1d11	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=9cba0a5e2174c394d70ed2428c9dbae4
+_md5_=06d37b7c886df78defe54bc61ce6376e
