@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/nfft/nfft-3.2.3.ebuild,v 1.1 2013/05/06 15:24:57 ottxor Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/nfft/nfft-3.2.3.ebuild,v 1.2 2015/01/04 16:32:28 ottxor Exp $
 
 EAPI="5"
 
@@ -15,7 +15,7 @@ SLOT="0"
 KEYWORDS="~x86 ~amd64"
 IUSE="openmp static-libs"
 
-RDEPEND="sci-libs/fftw:3.0[openmp?]"
+RDEPEND="sci-libs/fftw:3.0[threads,openmp?]"
 DEPEND="${RDEPEND}"
 
 pkg_pretend() {
