@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/nfft
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/nfft/ChangeLog,v 1.1 2013/05/06 15:24:57 ottxor Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/nfft/ChangeLog,v 1.2 2015/01/04 16:32:28 ottxor Exp $
+
+  04 Jan 2015; Christoph Junghans <ottxor@gentoo.org> nfft-3.2.3.ebuild:
+  fixed deps (bug #534346)
 
 *nfft-3.2.3 (06 May 2013)
 
